added images and descriptions

--- a/MulhollandHome.html
+++ b/MulhollandHome.html
@@ -23,12 +23,14 @@
     <main role="main">
         <article role="article">
 
-            <img src="images/mulholland-drive-poster.jpg" width="900" height="600" alt="rita">
+            <link rel="preload" href="images/mulholland-drive-poster.jpg" as="image">
+            <img src="images/mulholland-drive-poster.jpg" width="900" height="600" alt="rita" class="centerImg">
             <p> Mulholland Drive, released in 2001, is a masterpiece and a defining peice of the 2000s. This movie has
                 made me fall in love
                 with the art of cinema, so I made a website dedicated to it. David Lynch, the director, has made
                 mesmerising pieces of art over the years,
-                Lost Highway, Blue Velvet, Inland Empire, and Twin Peaks. But Mulholland Drive is arguably his best work
+                Lost Highway, Blue Velvet, Inland Empire, Twin Peaks and Twin Peaks <acronym
+                    title="Fire Walk With Me">FWWM</acronym>. But Mulholland Drive is arguably his best work
                 and maybe most impactful.
             </p>
             <h2>Locations</h2>
@@ -47,10 +49,11 @@
                 the story the myths and mysterys of Hollywood and Los Angeles is what brings this story together.
             </p>
             <h2>David Lynch</h2>
-
+            <img src="images/davidlynch.jpg" width="600" height="420" alt="david lynch">
             <p>
-                <img src="images/davidlynch.jpg" width="600" height="420" alt="david lynch">
-                Born in January 20, 1946 and Died January 16, 2025.
+
+                Born in January 20, 1946 and Died January 16, 2025. David Lynch directed Mullholland Drive when he was
+                55 years old.
 
             </p>
         </article>
