--- a/summary.html
+++ b/summary.html
@@ -23,7 +23,9 @@
     <Main role="main">
         <article role="article">
             <p>
-                <img src="images/bettyfade.jpg" width="960" height="517" alt="betty fade scene">
+                <img src="images/bettyfade.jpg" width="960" height="517" alt="betty fade scene" class="centerImg">
+                We see a sequence of people dancing with a elderly couple looking on fade in and out throughout the
+                dance before it ends.
                 We follow a Limo driving through the darkness of the Hollywood hills. Two men in suits are sitting in
                 the front while a dark haired woman is sitting in the back.
                 The car stops and one of the men pulls out a silenced pistol and orders the woman to get out of the car.
@@ -31,9 +33,13 @@
                 another car on the hills crashes into limo which causes both men to die instantly. The woman was thrown
                 to the back of the seats and had hit her head causing her to start bleeding. After
                 realizing what just happened she leaves the car and starts to walk through the trees and hills of
-                Hollywood trying to get to safety. As she walks the streets she hides behind bushes and trees
+                Hollywood trying to get to safety as she sees the overview of Los Angeles. As she walks the streets she
+                hides behind bushes and trees
                 when she senses someone might see her.
             </p>
+
+            <img src="images/mullhollanddrbegin.jpg" width="600" height="360" alt="Mullholland Drive Sign"
+                class="centerImg">
 
             <p>
 
@@ -45,6 +51,7 @@
                 friend was in both of them very afraid. They then walk out to the back of diner to confront his fear
                 and then we he reaches the wall BOOM! a hideous man scares him causing him to collapse.
             </p>
+            <img src="images/homelessbum.jpg" width="600" height="360" alt="homeless bum" class="centerImg">
             <p>
                 We cut to the woman still sleeping as, a small man calls someone at the front desk telling him the girl
                 is
@@ -57,10 +64,13 @@
                 She meets the manager and they have small talk as she escorts Betty into her new home. Betty then
                 explores her new place joyfully and goes into the bathroom where she finds
                 the dark hair woman showering she is startled and says she didn't know her Aunt Ruth had someone else
-                living here. Betty asks for her name but she couldn't ansswer as she looks lost trying to remember her
-                name.
+                living here. Betty asks for her name but she couldn't answer as she looks lost trying to remember her
+                name. As she is drying up from her shower she sees a poster on wall for the film 'Gilda' and the actress
+                name was
+                Rita Hayworth, so she tells Betty her name is Rita!
 
             </p>
+            <img src="images/MULHOLLAND-DRIVE-rita.jpg" width="600" height="360" alt="rita name" class="centerImg">
 
             <p>
                 At a tall building, with a big sign called Ryan Entertainment, we see businessmen talking to a Director
@@ -77,12 +87,23 @@
                 of the businessmen
                 explains to him that Kesher does not want the girl and the small man says to shut it all down.
             </p>
+            <img src="images/smallman.jpg" width="600" height="360" alt="small man" class="centerImg">
             <p>
                 Two men are having a conversation, and then all the sudden the man standing up takes out a silenced
                 pistol and kills the man.
                 After trying to stage the scene as a suicide he accidentally fires off the gun, firing the bullet into
-                the wall hitting the next door neighbors leg.
+                the wall hitting the next door neighbors leg. After going to the next door neighbor to kill the lady he
+                accidentally
+                shot he seems to struggle a lot with completing the job. He begins to drag the lady through the hallway
+                covering her mouth
+                but once the janitor spots him and stares at him. The assassin is trying to explain to the janitor
+                what is happening but the janitor is not buying it. The janitor enters the room where the dead bodies
+                and the assasin kills him too, he then tries to setup
+                the scene as the man he originally killed shot the janitor but as he shoots the gun again at vaccuum it
+                causes a fire which causes him to leave.
             </p>
+            <img src="images/bumbling-hitman-mulholland-dr.jpg" width="600" height="360" alt="bad hitman"
+                class="centerImg">
             <p>
                 Betty is on phone telling her Aunt Ruth about her friend Rita, but Aunt Ruth tells Betty that she does
                 not know who Rita is and that she should call the police. But Betty declines
@@ -138,10 +159,11 @@
                 Adam Kesher arrives at a ranch at the top of a mountain in the middle of the night and in the dark is
                 "The Cowboy".
                 The Cowboy talks to Kesher and says "A Man's attitude dictates". After talking to Kesher in riddles and
-                metaphor he
+                metaphors he
                 explains to Kesher he needs to go back to work and needs to cast Camilia Rhodes, as the lead actress,
                 for the betterment of his life.
             </p>
+            <img src="images/thecowboyscene.jpg" width="600" height="360" alt="the cowboy scene" class="centerImg">
             <p>
                 Betty and Rita practice lines for Betty's audtion soon. The manager, Coco, comes over to talk to Betty
                 about who is the woman staying in her
@@ -154,6 +176,8 @@
                 Betty knocks the audition out the park but after they leave red hair woman says that the director will
                 never get his movie made due to others interfering.
             </p>
+            <img src="images/naomi-watts-mulholland-drive-audition.jpg" width="600" height="360" alt="Audition scene"
+                class="centerImg">
             <p>
                 Betty is taken to a set nearby which is the exact same place Adam Kesher is holding auditions for his
                 movie. As Betty walks in
@@ -216,10 +240,12 @@
                 the room Betty and Rita found the dead body in but
                 The Cowboy opens the door to the bedroom with the body and says its time to wake up but the body doesn't
                 answer. We then see Betty wake up in the same bed to a knock on the door
-                its the neighbor we met earlier asking her for her stuff back. But the neighbor doesn't call her Betty
+                its the neighbor we met earlier asking her for her stuff back. But the neighbor doesn't call her
+                <strike>Betty</strike>
                 she calls her Diane! She leaves Diane's house saying that two detectives were
                 looking for her. Diane then goes to the sink to remember a time in her life, when she turns around Rita
-                is there in the house but she doesn't call her Rita she calls her Camilia and begins to cry.
+                is there in the house but she doesn't call her <stirke>Rita</stirke> she calls her Camilia and begins to
+                cry.
                 All of the sudden a topless Camilia is on her couch while Diane is also topless, Diane kisses Camilia on
                 the couch but Camilia says that they should stop doing this but Diane is not having it
                 and says "It's him isn't it?"
