--- a/characters.html
+++ b/characters.html
@@ -22,45 +22,82 @@
     </header>
     <Main role="main">
         <article role="article">
+            <img src="images/mulhollanddr_1280.png" width="1000" height="620" alt="theaterscene" class="centerImg">
             <p>
-                <img src="images/mulhollanddr_1280.png" width="1280" height="720" alt="theaterscene">
                 Throughout the length of Mulholland Drive we are introduced to the most colorful and mysterious
                 characters, so much that it deserves its own page.
                 Through the length of Mulholland Drive it could get confusing to keep up with these characrers and their
                 motivations so here we will break it all down.
+            </p>
             <h2>Betty Elms</h2>
-            <img src="images/a90ddddeae8a0efc6ca9290582907668.jpg" width="600" height="360" alt="betty elms">
-            Betty Elms (played by Naomi Watts), is a young aspiring actress who moves to Hollywood to chase her dream of
-            being a big movie star. As she stays at her Aunt Ruth's place she finds another girl
-            named Rita staying at her Aunt's house. But Rita has lost her memories and Betty is persistent on helping
-            Rita recover her memories and find out who she is.
+            <div class="sideBySide">
+                <img src="images/a90ddddeae8a0efc6ca9290582907668.jpg" width="600" height="360" alt="betty elms">
+                <dialog open>
+                    <p>It'll be just like in the movies. We'll pretend to be someone else.</p>
+                </dialog>
+            </div>
+            <p>
+                Betty Elms (played by Naomi Watts), is a young aspiring actress who moves to Hollywood to chase her
+                dream of
+                being a big movie star. As she stays at her Aunt Ruth's place she finds another girl
+                named Rita staying at her Aunt's house. But Rita has lost her memories and Betty is persistent on
+                helping
+                Rita recover her memories and find out who she is.
+            </p>
 
             <h2>Rita</h2>
-            <img src="images/863d01994fce1b6b5a0e85d6cd54b7df.jpg" width="600" height="360" alt="rita">
-            Rita (played by Laura Harring), we first see Rita in the back of a car where two men attempt to take her
-            life but by luck crash the car which leaves Rita able to escape.
-            But as Rita wakes up she cannot remember who she is and where she is. She soons reaches Aunt Ruth's house,
-            where she sneaks in and settles down while Aunt Ruth vacates the home waiting for her neice to come.
-            While she's there, Betty comes where they meet face to face and it is revealed that Rita does not know her
-            own identity and only says her name is "Rita" because of a poster on the wall. Once Betty finds out it is
-            Betty's mission to help Rita find out who she is, as the two spend
-            more and more time together
-            they soon develop feelings for each other.
+            <div class="sideBySide">
+                <img src="images/863d01994fce1b6b5a0e85d6cd54b7df.jpg" width="600" height="360" alt="rita">
+                <dialog open>
+                    <p>That's where I was going... Mulholland Dr</p>
+                </dialog>
+            </div>
+            <p>
+                Rita (played by Laura Harring), we first see Rita in the back of a car where two men attempt to take her
+                life but by luck crash the car which leaves Rita able to escape.
+                But as Rita wakes up she cannot remember who she is and where she is. She soons reaches Aunt Ruth's
+                house,
+                where she sneaks in and settles down while Aunt Ruth vacates the home waiting for her neice to come.
+                While she's there, Betty comes where they meet face to face and it is revealed that Rita does not know
+                her
+                own identity and only says her name is "Rita" because of a poster on the wall. Once Betty finds out it
+                is
+                Betty's mission to help Rita find out who she is, as the two spend
+                more and more time together
+                they soon develop feelings for each other.
+            </p>
 
             <h2>Adam Kesher</h2>
-            <img src="images/4ec260af16f6ad22733687139f71d253.jpg" width="600" height="360" alt="adam kesher">
-            Adam Kesher (played by Justin Theroux), is a Hollywood director trying to make a film throughout Mulholland
-            Drive. His film is taken control
-            by Mobsters who have control in Hollywood. The Mobsters advise Kesher that he casts a certain actress in his
-            movie but he refuses. After he refuses he goes on to have
-            one of the worst days any human can. As he meets with a mysterious person named "The Cowboy", who urges him
-            to cast the actress for his own good, he finally gives in.
+            <div class="sideBySide">
+                <img src="images/4ec260af16f6ad22733687139f71d253.jpg" width="600" height="360" alt="adam kesher">
+                <dialog open>
+                    <p>That girl is not in my film!</p>
+                </dialog>
+            </div>
+            <p>
+                Adam Kesher (played by Justin Theroux), is a Hollywood director trying to make a film throughout
+                Mulholland
+                Drive. His film is taken control
+                by Mobsters who have control in Hollywood. The Mobsters advise Kesher that he casts a certain actress in
+                his
+                movie but he refuses. After he refuses he goes on to have
+                one of the worst days any human can. As he meets with a mysterious person named "The Cowboy", who urges
+                him
+                to cast the actress for his own good, he finally gives in.
+            </p>
             <h2>Dan</h2>
-            <img src="images/mulholland-drive-dan.jpg" width="600" height="360" alt="rita">
-            Dan (played by Patrick Fischler), is a man in a diner recounting a terrifying nightmare he had seeing a
-            horrifying person behind the diner he is currently at.
-            As he checks behind the counter to confront this uncomfortable feeling he has, a homeless bum comes out of
-            the back and scares him which causes him to collapse.
+            <div class="sideBySide">
+                <img src="images/mulholland-drive-dan.jpg" width="600" height="360" alt="rita">
+                <dialog open>
+                    <p>I had a dream about this place</p>
+                </dialog>
+            </div>
+            <p>
+                Dan (played by Patrick Fischler), is a man in a diner recounting a terrifying nightmare he had seeing a
+                horrifying person behind the diner he is currently at.
+                As he checks behind the counter to confront this uncomfortable feeling he has, a homeless bum comes out
+                of
+                the back and scares him which causes him to collapse.
             </p>
         </article>
     </Main>
