added pics to summary page

--- a/summary.html
+++ b/summary.html
@@ -126,6 +126,7 @@
                 The man then hits Kesher and throws him out his own house as he and Kesher's wife stay in the house
                 while Kesher is forced to leave.
             </p>
+            <img src="images/mulholland-billyray.jpg" widith="600" height="360" alt="billy ray cyrus" class="centerImg">
             <p>
                 Betty and Rita hide her purse with the key inside of a box in the dresser. They arrive at the same diner
                 we first saw in the beginning of the movie. They reach a payphone to ask the police about a crash that
@@ -144,6 +145,7 @@
                 a person named "The Cowboy" wants to meet him. Adam agrees to meet him as he believes his day can't get
                 any worse.
             </p>
+            <img src="images/mulholland-kesher.jpg" widith="600" height="360" alt="kesher sad" class="centerImg">
             <p>
                 Betty and Rita find the home of where the number belongs to. Rita is still unsure of going but Betty
                 assures her it will be fine.
@@ -155,6 +157,7 @@
                 the camera closes up on Ritas face and shows how
                 freightend she looks.
             </p>
+            <img src="images/Rita-scared.jpg" width="600" height="360" alt="rita scared" class="centerImg">
             <p>
                 Adam Kesher arrives at a ranch at the top of a mountain in the middle of the night and in the dark is
                 "The Cowboy".
@@ -190,6 +193,8 @@
                 she has to leave to help Rita find her identity and Adam has a look of sadness once more as he watches
                 Betty leave.
             </p>
+            <img src="images/adam-kesher-stare.jpeg" widith="600" height="360" alt="adam kesher stare"
+                class="centerImg">
             <p>
                 As Betty and Rita reach the house they were looking for, Rita gets scared and hide under the window as
                 she sees two men in suit waiting in a car,
@@ -204,6 +209,7 @@
                 the bed, Rita screams but Betty closes her mouth before anyone else can hear her.
                 Betty and Rita leave with Rita running out the house screaming in horror as to what she saw.
             </p>
+            <img src="images/rita-scream.png" width="600" height="360" alt="rita scream" class="centerImg">
             <p>
                 Rita reaches Betty apartment and begins to cut her hair, Betty says she understands what she has to do
                 but to let her do it and Rita appears next with a blonde short wig.
@@ -215,6 +221,8 @@
                 to say "Silencio" in her sleep and speaks spanish she begins
                 to tell Betty that she needs to go somewhere with her.
             </p>
+            <img src="images/mulholland-drive-blonderita.jpg" width="600" height="360" alt="blonde rita"
+                class="centerImg">
             <p>
                 Betty and Rita in the middle of the night arrive at a club with a show going on. A man saying that this
                 is all an illusion
@@ -235,6 +243,7 @@
                 as the box opens the camera zooms in the pitch black darkness that is in the box and the box falls to
                 the ground with Rita disappearing.
             </p>
+            <img src="images/bluebox.jpeg" widith="600" height="360" alt="blue box" class="centerImg">
             <p>
                 Aunt Ruth hears something coming from her room which leads her to check but nothing is there. We go back
                 the room Betty and Rita found the dead body in but
@@ -250,6 +259,8 @@
                 the couch but Camilia says that they should stop doing this but Diane is not having it
                 and says "It's him isn't it?"
             </p>
+            <img src="images/mulholland-drive-camilia&diane.jpg" widith="600" height="360"
+                alt="diane and camilia argument" class="centerImg">
             <p>
                 On the set of a movie, Diane is watching Adam Kesher directing a movie and is showing an actor how to do
                 a scene with Camilia. Adam Kesher while demonstrating the scene is getting intimate with Camilia and we
@@ -272,6 +283,8 @@
                 Diane out of that memory.
 
             </p>
+            <img src="images/Naomi-Watts-in-Mulholland-Drive.jpeg" widith="600" height="360" alt="diane cry"
+                class="centerImg">
             <p>
                 Diane is in a diner with the man who hilariously killed those 3 people earlier in the movie. As the
                 waitress is at their table she has the name tag Betty but it is a different blonde woman
@@ -294,6 +307,8 @@
                 the skyline of Los Angeles. The last scene of the movie is the blue haired lady from Club Silencio
                 whispering "Silencio" and the movie fades to black that was the horror of Mulholland Drive.
             </p>
+
+            <img src="images/diane-scream.jpeg" widith="600" height="360" alt="diane scream" class="centerImg">
 
         </article>
     </Main>
