--- a/MulhollandHome.html
+++ b/MulhollandHome.html
@@ -48,14 +48,19 @@
                 location is crucial to
                 the story the myths and mysterys of Hollywood and Los Angeles is what brings this story together.
             </p>
-            <h2>David Lynch</h2>
-            <img src="images/davidlynch.jpg" width="600" height="420" alt="david lynch">
+            <h2 class="center">David Lynch</h2>
+            <img src="images/davidlynch.jpg" width="600" height="420" alt="david lynch" class="centerImg">
             <p>
 
                 Born in January 20, 1946 and Died January 16, 2025. David Lynch directed Mullholland Drive when he was
-                55 years old.
+                55 years old. Directed other movies such as Blue Velvet, Eraserhead, Twin Peaks <acronym
+                    title="Fire Walk With Me">FWWM</acronym>, Dune, etc.
 
             </p>
+            <img src="images/Mulholland-Drive-Vintage-Movie-Poster-Original_2e5e5259.jpg" width="600" height="420"
+                alt="diner" style="display:inline-block;">
+            <img src="images/mulholland-poser-blue.jpg" width="600" height="420" alt="ruthshouse"
+                style="display:inline-block;">
         </article>
     </main>
 </body>
