--- a/MulhollandHome.html
+++ b/MulhollandHome.html
@@ -58,8 +58,8 @@
 
             </p>
             <img src="images/Mulholland-Drive-Vintage-Movie-Poster-Original_2e5e5259.jpg" width="600" height="420"
-                alt="diner" style="display:inline-block;">
-            <img src="images/mulholland-poser-blue.jpg" width="600" height="420" alt="ruthshouse"
+                alt="mulholland drive poster" style="display:inline-block;">
+            <img src="images/mulholland-poser-blue.jpg" width="600" height="420" alt="mulholland poster"
                 style="display:inline-block;">
         </article>
     </main>
