--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h2>Welcome To Mulholland Drive</h2>
         <nav role="navigation">
             <ul>
-                <li><a href="Index.html" title="Mulholland Drive Home">Home</a></li>
+                <li><a href="index.html" title="Mulholland Drive Home">Home</a></li>
                 <li><a href="summary.html" title="Summary Of Mulholland Drive">Summary</a></li>
                 <li><a href="characters.html" title="Characters of Mulholland">Characters</a></li>
                 <li><a href="impact.html" title="Impact of Mulholland Drive">Impact</a></li>
