--- a/characters.html
+++ b/characters.html
@@ -31,6 +31,7 @@
             </p>
             <h2>Betty Elms</h2>
             <div class="sideBySide">
+                <!--makes it so the dialog quote is side by side on the same block with the image-->
                 <img src="images/a90ddddeae8a0efc6ca9290582907668.jpg" width="600" height="360" alt="betty elms">
                 <dialog open>
                     <p>It'll be just like in the movies. We'll pretend to be someone else.</p>
